# otsdaq_demo

./: .gitignore  CMakeLists.txt  CMakePresets.json
Data/ConfigurationDataExamples/: ConfigurationBase.xsd  OpenConfig.csh
Data/ConfigurationDataExamples/ARTDAQAggregatorConfiguration/0/: ARTDAQAggregatorConfiguration_v0.xml
Data/ConfigurationDataExamples/ARTDAQAggregatorConfiguration/1/: ARTDAQAggregatorConfiguration_v1.xml
Data/ConfigurationDataExamples/ARTDAQBuilderConfiguration/0/: ARTDAQBuilderConfiguration_v0.xml
Data/ConfigurationDataExamples/ARTDAQBuilderConfiguration/1/: ARTDAQBuilderConfiguration_v1.xml
Data/ConfigurationDataExamples/ARTDAQConsumerConfiguration/0/: ARTDAQConsumerConfiguration_v0.xml
Data/ConfigurationDataExamples/ARTDAQConsumerConfiguration/1/: ARTDAQConsumerConfiguration_v1.xml
Data/ConfigurationDataExamples/ConfigurationAliases/0/: ConfigurationAliases_v0.xml
Data/ConfigurationDataExamples/ConfigurationDependencies/0/: ConfigurationDependencies_v0.xml
Data/ConfigurationDataExamples/Configurations/0/: Configurations_v0.xml
Data/ConfigurationDataExamples/DQMHistosConsumerConfiguration/0/: DQMHistosConsumerConfiguration_v0.xml
Data/ConfigurationDataExamples/DQMHistosConsumerConfiguration/1/: DQMHistosConsumerConfiguration_v1.xml
Data/ConfigurationDataExamples/DataBufferConfiguration/0/: DataBufferConfiguration_v0.xml
Data/ConfigurationDataExamples/DataBufferConfiguration/1/: DataBufferConfiguration_v1.xml
Data/ConfigurationDataExamples/DataBufferConfiguration/3/: DataBufferConfiguration_v3.xml
Data/ConfigurationDataExamples/DataDecoderConsumerConfiguration/0/: DataDecoderConsumerConfiguration_v0.xml
Data/ConfigurationDataExamples/DataManagerConfiguration/0/: DataManagerConfiguration_v0.xml
Data/ConfigurationDataExamples/DataManagerConfiguration/1/: DataManagerConfiguration_v1.xml
Data/ConfigurationDataExamples/DataManagerConfiguration/2/: DataManagerConfiguration_v2.xml
Data/ConfigurationDataExamples/DataManagerConfiguration/3/: DataManagerConfiguration_v3.xml
Data/ConfigurationDataExamples/DefaultConfigurations/0/: DefaultConfigurations_v0.xml
Data/ConfigurationDataExamples/DetectorConfiguration/0/: DetectorConfiguration_v0.xml
Data/ConfigurationDataExamples/DetectorConfiguration/3/: DetectorConfiguration_v3.xml
Data/ConfigurationDataExamples/DetectorToFEConfiguration/3/: DetectorToFEConfiguration_v3.xml
Data/ConfigurationDataExamples/FEConfiguration/0/: FEConfiguration_v0.xml
Data/ConfigurationDataExamples/FEConfiguration/1/: FEConfiguration_v1.xml
Data/ConfigurationDataExamples/FEConfiguration/2/: FEConfiguration_v2.xml
Data/ConfigurationInfo/: FE2ConfigurationInfo.xml  FEInterfaceConfigurationInfo.xml  FEOtsUDPTemplateInterfaceConfigurationInfo.xml  XDAQApplicationConfigurationInfo.xml
Data/MessageFacilityConfigurations/: MessageFacilityGen.fcl  QuietForwarderGen.cfg
Data/ServiceData/: ActiveConfigurationGroups.cfg
Data/XDAQConfigurations/: StartMPI_gen.sh  otsConfigurationNoRU_CMake.xml  otsConfiguration_CMake.xml
UserWebGUI/: UserWebGUI
UserWebGUI/html/: ConfigurationAPI_exampleApp.html  SmartLaunch.html
databases/filesystemdb/test_db/: README_otsdaq_flatten.txt
databases/filesystemdb/test_db/DetectorConfiguration/: index.json
otsdaq-demo/: CMakeLists.txt
otsdaq-demo/ArtModules/: CMakeLists.txt  ODWFViewer_module.cc  OtsDemoArtdaqFragmentNamingService_service.cc  OtsDemoInput_source.cc  OtsInput_source.cc  WFViewer_module.cc
otsdaq-demo/ArtModules/detail/: RawEventQueueReader.cc  RawEventQueueReader.hh
otsdaq-demo/ControlsInterfacePlugins/: CMakeLists.txt  ControlsOtsInterface.h  ControlsOtsInterface_controls.cc  EpicsInterface.h  EpicsInterface_monitor.cc  TemplateControlsInterface_controls.cc
otsdaq-demo/DataProcessorPlugins/: CMakeLists.txt  DemoDQMHistos.cc  DemoDQMHistos.h  DemoDQMHistosConsumer.h  DemoDQMHistosConsumer_processor.cc
otsdaq-demo/DemoRootUtilities/: CMakeLists.txt  DemoDQMHistos.cc  DemoDQMHistos.h
otsdaq-demo/DetectorReader/: CMakeLists.txt
otsdaq-demo/FEInterfaces/: CMakeLists.txt  FEOtsEthernetProgramInterface.h  FEOtsEthernetProgramInterface_interface.cc  FEOtsUDPTemplateInterface.h  FEOtsUDPTemplateInterface_interface.cc  FrontEndInterfaceTemplate.cc  FrontEndInterfaceTemplate.h  connections_test.xml  myNewInterface.h  myNewInterface_interface.cc
otsdaq-demo/Generators/: CMakeLists.txt  DataGenReceiver.hh  DataGenReceiver_generator.cc  STIBReceiver.hh  STIBReceiver_generator.cc
otsdaq-demo/InterfaceTest/: CMakeLists.txt  DemoInterfaceTestMain.cc  RunInterfaceTest.sh
otsdaq-demo/Overlays/: CMakeLists.txt  DataGenFragment.hh  DataGenFragmentWriter.hh  FragmentType.cc  FragmentType.hh  OtsDemo_fragmentNameHelper.cc
otsdaq-demo/Overlays/bkup/: DataGenFragment.hh  FragmentType.cc  FragmentType.hh  STIBFragment.cc  STIBFragment.hh  STIBFragmentWriter.hh
otsdaq-demo/SlowControlsInterfacePlugins/: CMakeLists.txt  SlowControlsInterfaceTemplate.h  SlowControlsInterfaceTemplate_controls.cc  SlowControlsInterfaceTemplate_slowcontrols.cc
otsdaq-demo/TemplateDirectory/: CMakeLists.txt  TemplateSupervisor.cc  TemplateSupervisor.h
test/: CMakeLists.txt  ddcp_hw_emulator.cpp  ddcp_sw_emulator.cpp  oei_simple_ops.py  ots_udp_hw_emulator.cpp  ots_udp_sw_emulator.cpp  udp_data_emulator.cpp
tools/: CMakeLists.txt  StartOTS.sh  StartOTS_Develop.sh  example_setup_mongodb.sh  fetch_products.sh  get_snapshot_data.sh  get_snapshot_database.sh  get_tutorial_artdaq_data.sh  get_tutorial_artdaq_database.sh  get_tutorial_data.sh  get_tutorial_database.sh  install_ots_repo.sh  ots-quick-spack-start.sh  quick-mrb-start.sh  quick-spack-start.sh  redmine_login.sh  reset_ots.sh  reset_ots_artdaq_tutorial.sh  reset_ots_tutorial.sh  setup_ots.sh  start_ots.sh  udp_send_otsdaq.py  update_ots.sh  update_ots_donotrun.sh
tutorial_data/NoGitData_tutorial_first_demo/XDAQConfigurations/: otsConfigurationNoRU_CMake.xml
tutorial_data/NoGitData_tutorial_first_demo_v2/ConfigurationInfo/: DataBufferConfigurationInfo.xml  StateMachineConfigurationInfo.xml
ups/: product_deps
(+122 files in other folders)
